--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,20 @@
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
+body {
+  font-family: "Poppins", sans-serif;
+  background-color: #f1eff1;
+  color:#6F7378;
+}
+
+
+
 .App {
   text-align: center;
-  background-color: #f1eff1;
  
+
 }
 
 .Toastify__toast-container--top-center {
